[gd_scene load_steps=4 format=3 uid="uid://cpja6dvi7a3ph"]

[ext_resource type="Script" path="res://levels/menu/menu.gd" id="1_w8ayo"]
[ext_resource type="Theme" uid="uid://dk1lq0oeybxad" path="res://ui/theme.tres" id="2_qqqd8"]
[ext_resource type="Script" path="res://levels/menu/ui_button.gd" id="3_feo83"]

[node name="Menu" type="Node2D"]
script = ExtResource("1_w8ayo")

[node name="Canvas" type="CanvasLayer" parent="."]

[node name="Container" type="Control" parent="Canvas"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("2_qqqd8")

[node name="Background" type="ColorRect" parent="Canvas/Container"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.0901961, 0.12549, 0.219608, 1)

[node name="Menu" type="Control" parent="Canvas/Container"]
layout_mode = 1
anchors_preset = 13
anchor_left = 0.5
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -148.0
offset_right = 148.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Canvas/Container/Menu"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_bottom = -42.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 8
alignment = 2

[node name="Title" type="Label" parent="Canvas/Container/Menu/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "UNTITLED GAME"
horizontal_alignment = 1

[node name="PlayButton" type="Button" parent="Canvas/Container/Menu/VBoxContainer"]
layout_mode = 2
text = "Play"
script = ExtResource("3_feo83")

[node name="SettingsButton" type="Button" parent="Canvas/Container/Menu/VBoxContainer"]
layout_mode = 2
text = "Settings"
script = ExtResource("3_feo83")

[node name="CreditsButton" type="Button" parent="Canvas/Container/Menu/VBoxContainer"]
layout_mode = 2
text = "Credits"
script = ExtResource("3_feo83")

[node name="Credits" type="Control" parent="Canvas/Container"]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Container" type="VBoxContainer" parent="Canvas/Container/Credits"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 1
anchors_preset = 13
anchor_left = 0.5
anchor_right = 0.5
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
alignment = 2

[node name="Title" type="Label" parent="Canvas/Container/Credits/Container"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "Credits"
horizontal_alignment = 1
uppercase = true

[node name="GoBackButton" type="Button" parent="Canvas/Container/Credits/Container"]
layout_mode = 2
text = "Go Back"
script = ExtResource("3_feo83")

[connection signal="pressed" from="Canvas/Container/Menu/VBoxContainer/PlayButton" to="." method="_on_play_button_pressed"]
[connection signal="pressed" from="Canvas/Container/Menu/VBoxContainer/SettingsButton" to="." method="_on_settings_button_pressed"]
[connection signal="pressed" from="Canvas/Container/Menu/VBoxContainer/CreditsButton" to="." method="_on_credits_button_pressed"]
[connection signal="pressed" from="Canvas/Container/Credits/Container/GoBackButton" to="." method="_on_go_back_button_pressed"]
